# safeguard-ansible

./: .gitignore  AGENTS.md  README.md  azure-pipelines.yml  versionnumber.ps1
.agents/skills/build-and-release/: SKILL.md
.agents/skills/pysafeguard-api/: SKILL.md
.agents/skills/testing-guide/: SKILL.md
collection/: azure-pipelines.yml
collection/oneidentity/safeguard/: README.md  galaxy.yml
collection/oneidentity/safeguard/plugins/: README.md
collection/tests/: conftest.py  pytest.ini  requirements.txt  test_safeguardaccessrequest.py  test_safeguardcredentials.py  test_tls_verification.py  test_unit.py
collection/tests/Ansible/: inventory.yaml
collection/tests/helpers/: certificates.py  provisioning.py
collection/tests/playbooks/: a2a_invalid_credtype.yml  a2a_known_password.yml  a2a_missing_appliance.yml  a2a_missing_cert.yml  a2a_multi_key.yml  a2a_password.yml  a2a_privatekey.yml  a2a_tls_verified.yml  accessrequest_account.yml  accessrequest_bad_credentials.yml  accessrequest_envvars.yml  accessrequest_invalid_credtype.yml  accessrequest_known_password.yml  accessrequest_password.yml  accessrequest_privatekey.yml  accessrequest_sshkey_account.yml  accessrequest_tls_verified.yml
credential_type_plugin/: README.md  azure-pipelines.yml  pyproject.toml  setup.py
credential_type_plugin/safeguardcredentialtype/: __init__.py
credential_type_plugin/tests/: conftest.py  pytest.ini  requirements.txt  test_integration.py  test_unit.py
pipeline-templates/: build-collection-steps.yml  build-credplugin-steps.yml  global-variables.yml
(+3 files in other folders)
